--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h1>Hello World!</h1>
+					<p>Project Default</p>
 				</div>
 			</div>
 		</div>
 	</section>
-		<script src="assets/jquery/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-		<script src="assets/bootstrap/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<script src="assets/jquery/dist/jquery.slim.min.js" ></script>
+		<script src="assets/bootstrap/dist/js/bootstrap.min.js" ></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
